add lines to note. create new note. change bgc and border color. pin note option. style changes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
 
     <script src="lib/react.development.js"></script>
     <script src="lib/react-dom.development.js"></script>
     <script src="./lib/react-router-dom.min.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>React Starter</title>
+    <title>Best App Ever!</title>
 </head>
 
 <body>
