--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <div id="root"></div>
 
+    <script src="./lib/axios.js"></script>
     <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
 
     <script src="lib/loadBabelModules.js"></script>
